#5680 fixed collapsed page color priority on drag in Fixes #5680

--- a/packages/survey-creator-core/src/components/page.scss
+++ b/packages/survey-creator-core/src/components/page.scss
@@ -125,28 +125,6 @@ svc-page {
   }
 }
 
-.svc-page .svc-page__content--collapsed {
-  &::after {
-    content: "";
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    border: 2px $border dashed;
-    margin: -2px;
-    border-radius: calcSize(1.25);
-    box-sizing: content-box;
-    pointer-events: none;
-  }
-  &.svc-page__content--collapsed-drag-over-inside {
-    &::after {
-      border: 2px $primary solid;
-      background: $primary-light;
-    }
-  }
-}
-
 .svc-creator .svc-page .svc-page__content--selected,
 .svc-creator .svc-page .svc-page__content--selected:focus,
 .svc-hovered.svc-page__content {
@@ -161,6 +139,31 @@ svc-page {
     visibility: visible;
   }
 }
+
+.svc-creator .svc-page .svc-page__content--collapsed {
+  &::after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 2px $border dashed;
+    margin: -2px;
+    border-radius: calcSize(1.25);
+    box-sizing: content-box;
+    pointer-events: none;
+  }
+  &.svc-page__content--collapsed-drag-over-inside {
+    box-shadow: 0 0 0 2px $primary;
+    background: $primary-light;
+    &::after {
+      border: 2px $primary solid;
+      background: $primary-light;
+    }
+  }
+}
+
 .svc-creator--mobile {
   .svc-page .svc-page__content--collapsed {
     &::after {
